tests/ui/consts/const-eval/ub-write-through-immutable.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ub-write-through-immutable.rs:10:5
   |
LL |     *ptr = 0;
   |     ^^^^^^^^ writing through a pointer that was derived from a shared (immutable) reference

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-write-through-immutable.rs:17:5
   |
LL |     *ptr = 0;
   |     ^^^^^^^^ writing through a pointer that was derived from a shared (immutable) reference

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
